# DLC2Kinematics

./: pyproject.toml  setup.cfg  setup.py
src/dlc2kinematics/: joint_analysis.py
src/dlc2kinematics/utils/: auxiliaryfunctions.py
