[project]
name = "dlc2kinematics"
version = "0.0.7"
description = "A post-deeplabcut module for kinematic analysis"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "Mackenzie Mathis Laboratory", email = "mackenzie@post.harvard.edu"}
]
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
  "h5py",
  "c3d>0.5",
  "ipython",
  "ipython-genutils",
  "matplotlib",
  "numpy>=1.22",
  "opencv-python",
  "pandas>=2.2",
  "python-dateutil",
  "pyyaml",
  "requests",
  "setuptools",
  "scikit-image",
  "scikit-learn",
  "scikit-kinematics",
  "tables",
  "scipy",
  "umap-learn",
  "ruamel-yaml>=0.15.0"
]
requires-python = ">=3.8"

[project.urls]
"Bug Tracker" = "https://github.com/AdaptiveMotorControlLab/DLC2Kinematics/issues"
"Documentation" = "https://github.com/AdaptiveMotorControlLab/DLC2Kinematics"
"Source Code" = "https://github.com/AdaptiveMotorControlLab/DLC2Kinematics"
"User Support" = "https://github.com/AdaptiveMotorControlLab/DLC2Kinematics/issues"

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/dlc2kinematics/_version.py"
