[metadata]
name = dlc2kinematics
version = 0.1.0
description = A post-deeplabcut module for kinematic analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdaptiveMotorControlLab/DLC2Kinematics
author = Mackenzie Mathis Laboratory
author_email = mackenzie@post.harvard.edu
license = custom
license_file = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
project_urls =
    Bug Tracker = https://github.com/AdaptiveMotorControlLab/DLC2Kinematics/issues
    Documentation = https://github.com/AdaptiveMotorControlLab/DLC2Kinematics
    Source Code = https://github.com/AdaptiveMotorControlLab/DLC2Kinematics
    User Support = https://github.com/AdaptiveMotorControlLab/DLC2Kinematics/issues

[options]
packages = find:
install_requires =
    h5py
    c3d>0.5
    ipython
    ipython-genutils
    matplotlib>=3.8.4
    numpy>=1.26
    pandas>=2.2
    python-dateutil
    pyyaml
    requests
    setuptools
    scikit-image
    scikit-image
    scikit-learn<1.2.2
    scikit-kinematics
    tables
    scipy
    umap-learn
    ruamel.yaml>=0.15.0
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov
    tox
